# auto-bot

./: .env.example  .gitignore  README.md  bot.py  docker-compose.yml  pyproject.toml  start.sh
admin_panel/: manage.py
admin_panel/admin_panel/: settings.py  urls.py  views.py
admin_panel/bot/: admin.py  models.py  views.py
admin_panel/bot/templates/admin/bot/: create_post.html  userposts_changelist.html
app/handlers/: __init__.py  admin_handlers.py  handlers.py  user_handlers.py
app/keybords/: keybords.py  main_menu.py
app/lexicon/: lexicon.py
app/sender/: sender.py
app/service/: functions.py  openai_service.py  redis_client.py
config_data/: config.py
db/: ORM.py  models.py
db/alembic/: env.py
db/alembic/versions/: 4806cd9f4f56_add_post_message_ids.py  8619a94d6906_add_all_tables.py  c830c25e71fb_add_is_deleted_to_user_posts.py
s3/: s3_client.py
